-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 24
-
Component/s: hotspot
-
b24
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8344406 | 21.0.6 | Martin Doerr | P4 | Resolved | Fixed | b04 |
| JDK-8346371 | 17.0.15 | Martin Doerr | P4 | Resolved | Fixed | b01 |
This should not be allowed because the required information in ppc.ad file is neither accurate nor complete.
We could implement support for OptoScheduling in the future, but the benefit is questionable because modern Power processors use out-of-order scheduling.
- backported by
-
JDK-8344406 [PPC64] Disallow OptoScheduling
-
- Resolved
-
-
JDK-8346371 [PPC64] Disallow OptoScheduling
-
- Resolved
-
- duplicates
-
JDK-8338446 UBSan: ad_ppc.hpp:4276:11: runtime error: shift exponent 100 is too large for 32-bit type 'unsigned int'
-
- Closed
-
- is cloned by
-
JDK-8343884 [s390x] Disallow OptoScheduling
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/0254b70a
-
Commit(master)
openjdk/jdk21u-dev/38f654ee
-
Commit(master)
openjdk/jdk/f621f26c
-
Review(master)
openjdk/jdk17u-dev/3105
-
Review(master)
openjdk/jdk21u-dev/1153
-
Review(master)
openjdk/jdk/21935