8343724: [PPC64] Disallow OptoScheduling